k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-backend-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: shop-backend
  template:
    metadata:
      labels:
        app: shop-backend
    spec:
      terminationGracePeriodSeconds: 40
      containers:
        - name: shop-backend
          image: ghcr.io/jangruebener/k8s-shop-backend:latest
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          ports:
          - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: shop-backend-service
spec:
  type: ClusterIP
  selector:
    app: shop-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
