k8s/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shop-mysql
spec:
  serviceName: shop-database-service
  replicas: 1
  selector:
    matchLabels:
      app: shop-mysql
  template:
    metadata:
      labels:
        app: shop-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: shop-database-service
spec:
  type: ClusterIP
  selector:
    app: shop-mysql
  ports:
    - port: 3306
      targetPort: 3306
