k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-frontend
  template:
    metadata:
      labels:
        app: shop-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: shop-frontend
          image: ghcr.io/jangruebener/k8s-shop-frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: shop-frontend-service
spec:
  type: ClusterIP
  selector:
    app: shop-frontend
  ports:
    - port: 80
      targetPort: 80
