k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shop-frontend-service
                port:
                  number: 80

          # Backend-API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shop-backend-service
                port:
                  number: 80
